[tool.poetry]
name = "kwok-etcd"
version = "0.1.0"
description = ""
authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fasttrackml = "^0.3.7"
psutil = "^5.9.6"
mlflow = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
